// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly no icon  1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation16 MuiCard-root css-1sp12f3-MuiPaper-root-MuiCard-root"
  id=""
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-14gdbdq-MuiTypography-root"
  />
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1tg5hpw-MuiTypography-root"
  >
    6.087
  </h4>
  <span
    className="MuiTypography-root MuiTypography-caption-semibold css-19re0ev-MuiTypography-root"
  >
    Lorem ipsum dolor sit amet
  </span>
</div>
`;

exports[`renders correctly standard  1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation16 MuiCard-root css-1sp12f3-MuiPaper-root-MuiCard-root"
  id=""
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-14gdbdq-MuiTypography-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="StarOutlineIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m22 9.24-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
      />
    </svg>
  </p>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1tg5hpw-MuiTypography-root"
  >
    6.087
  </h4>
  <span
    className="MuiTypography-root MuiTypography-caption-semibold css-19re0ev-MuiTypography-root"
  >
    Lorem ipsum dolor sit amet
  </span>
</div>
`;
